static/video_player_styles.css
:root {
  --black: #000000;
  --almost-black: #080708;
  --blue: #3772FF;
  --blue-light: #3787ff;
  --red: #DF2935;
  --yellow: #FDCA40;
  --light: #E6E8E6;
  --white: #FFFFFF;
}

* {
  position: relative;
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 22px;
  line-height: 1.5;
  color: var(--white);
  background: var(--black);
  background-image: linear-gradient(to bottom right, var(--almost-black), var(--black));
}

.app {
  height: 100vh;
  display: flex;
}

.form-section {
  padding: 15px 0 0 15px;
  width: 25%;
  color: var(--light);
  flex-shrink: 0;
}

//Video container and control styles

.image-section {
  width: 100%;
  height: 100vh;
  align-content: center;
  justify-content: center;
  flex-wrap: wrap;
  display: flex;
}


.container {
    position: relative;
    display: flex;
    width: max-content;
    height: max-content;
    justify-content: center;
    align-items: center;
    padding: 15px;
}

.container .controls {
    position: absolute;
    bottom: 40px;
    width: 100%;
    display: flex;
    justify-content: space-around;
    opacity: 0.2;
    transition: opacity 0.4s;
    padding-left: 15px;
    padding-right: 15px;
}
.container:hover .controls {
    opacity: 1;
}
.container .controls button {
    background: transparent;
    color: #fff;
    font-weight: bolder;
    text-shadow: 2px 1px 2px #000;
    border: none;
    cursor: pointer;
}
.container .controls .timeline {
    flex: 1;
    display: flex;
    align-items: center;
    border: none;
    border-right: 3px solid #ccc;
    border-left: 3px solid #ccc;
}
.container .controls .timeline .bar{
    background: rgb(1, 1, 65);
    height: 4px;
    flex: 1;
}
.container .controls .timeline .bar .inner{
    background: #ccc;
    width: 0%;
    height: 100%;
}
.fa {
    font-size: 20px !important;
}

.image-section a {
  margin: 0 15px 15px 0;
  content: '';
  width: 100%;
  height: 98%;
  display: block;
}

.image-section img {
  position: relative;
  margin-left: 15px;
  margin-right: 15px;
  top: 0;
  width: 100%;
  height: 95%;
  border-radius: 4px;
  object-fit: cover;
  display: block;
}

@media screen and (max-width: 1200px) {

  .app {
    flex-direction: column;
  }
  
  .form-section {
    padding-right: 15px;
    padding-bottom: 15px;
    width: 100%;
  }
  
  .image-section {
    padding-top: 0;
    width: 100%;
    height: auto;
  }
}

@media screen and (max-width: 800px) {
  
  .image-section a {
    padding-bottom: 60%;
    width: calc(100% - 15px);
  }
}

/* Forms */
form {
  width: 100%;
  flex-direction: column;
  display: flex;
}

input[type='file'] {
  margin: 0 0 12px;
  padding: 10px 10px;
  border-radius: 4px;
  font-size: 22px;
  color: var(--almost-black);
  background: var(--white);
}

input[type='submit'],
button[type='button'] {
  padding: 13px 20px;
  font-size: 22px;
  font-weight: bold;
  color: var(--white);
  border: none;
  border-radius: 4px;
  outline: none;
  box-shadow: none;
  cursor: pointer;
  background: var(--blue);
  background-image: linear-gradient(to bottom, var(--blue-light), var(--blue));
  transition: box-shadow .2s ease;
}

input[type='submit']:hover,
button[type='button']:hover {
  box-shadow: inset 0 -25px 25px var(--blue-light);
}

